# ai-product-engineering

./: .gitignore  README.md  contributions.md
Alex_Ruzu/: .gitignore
Alexander_Semenov/: .gitignore  README.md  Reviews.csv  main.py  requirements.txt  todo.md
Anton_Nelson/: README.md  article_new.txt  requirements.txt  summarization_demo.py  summarization_results.txt
Borodavchenko_Denis/: .env-example  README.md  abstractive.py  agent.py  extractive.py  main.py  tools.py
Denis_Zaripov/: .gitignore  README.md  requirements.txt  review_summarizer.py
Gaiar_Baimuratov/: .gitignore
Gaiar_Baimuratov/lesson2/reviews-fetcher/appbot-client/: .env.example  .gitignore  USAGE.md  appbot-api-docs.txt  pull_data.py  pyproject.toml  run_examples.py  run_tests.py  setup.py
Gaiar_Baimuratov/lesson2/reviews-fetcher/appbot-client/src/appbot/: __init__.py  client.py  examples.py
Gaiar_Baimuratov/lesson2/reviews-fetcher/appbot-client/tests/: test_client.py
Kirill_Madorin/: .gitignore  README.md  abstractive_summarizer.py  comparison_reporter.py  extract_reviews.py  extractive_summarizer.py  main_agent.py  requirements.txt
Mike_Malashkin_hometask_1/: .gitignore  README.md  TELEGRAM_INTEGRATION_GUIDE.md  TELEGRAM_MCP_SETUP.md  TELEGRAM_SETUP.md  analysis.py  analyze_sober_reviews.py  app_reviews_scraper.py  focus_group.py  group_discussion.py  main.py  persona_generator.py  processor.py  product_improvements.py  recommendations.py  requirements.txt  review_classifier.py  run_final_bugreports.py  run_final_improvements.py  run_final_recommendations.py  run_telegram_mcp.py  (+11 more)
(+282 files in other folders)
